docs/envoy/v1.14.0/_sources/api-v3/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto:

AwsRequestSigning
=================

.. _extension_envoy.filters.http.aws_request_signing:


This extension may be referenced by the qualified name *envoy.filters.http.aws_request_signing*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

AwsRequestSigning :ref:`configuration overview <config_http_filters_aws_request_signing>`.

.. _envoy_v3_api_msg_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning:

extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
----------------------------------------------------------------

`[extensions.filters.http.aws_request_signing.v3.AwsRequestSigning proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto#L18>`_

Top level configuration for the AWS request signing filter.

.. code-block:: json

  {
    "service_name": "...",
    "region": "...",
    "host_rewrite": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `service namespace
  <https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html#genref-aws-service-namespaces>`_
  of the HTTP endpoint.
  
  Example: s3
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `region <https://docs.aws.amazon.com/general/latest/gr/rande.html>`_ hosting the HTTP
  endpoint.
  
  Example: us-west-2
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.host_rewrite:

host_rewrite
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that before signing headers, the host header will be swapped with
  this value. If not set or empty, the original host header value
  will be used and no rewrite will happen.
  
  Note: this rewrite affects both signing and host header forwarding. However, this
  option shouldn't be used with
  :ref:`HCM host rewrite <envoy_v3_api_field_config.route.v3.RouteAction.host_rewrite_literal>` given that the
  value set here would be used for signing whereas the value set in the HCM would be used
  for host header forwarding which is not the desired outcome.
  
  

